## Copyright 2018-2021 Intel Corporation
## SPDX-License-Identifier: Apache-2.0

## DISCLAIMER: Bazel support is community-based. The maintainers do not
## use Bazel internally. The Bazel build can have security risks or
## optimization gaps.

load("@bazel_skylib//rules:expand_template.bzl", "expand_template")

expand_template(
    name = "config",
    out = "include/OpenImageDenoise/config.h",
    substitutions = {
        "#cmakedefine OIDN_STATIC_LIB": "",
        "#cmakedefine OIDN_API_NAMESPACE": "",
    },
    template = "include/OpenImageDenoise/config.h.in",
)

cc_library(
    name = "common",
    srcs = [
        "common/barrier.h",
        "common/exception.h",
        "common/math.h",
        "common/platform.cpp",
        "common/platform.h",
        "common/ref.h",
        "common/tasking.cpp",
        "common/tasking.h",
        "common/thread.cpp",
        "common/thread.h",
        "common/timer.h",
        "include/OpenImageDenoise/config.h",  # generted
        "include/OpenImageDenoise/oidn.h",
        "include/OpenImageDenoise/oidn.hpp",
    ],
    includes = ["include/OpenImageDenoise"],
    deps = [
        "@mkl_dnn_v1//:mkl_dnn",
        "@oneTBB//:tbb",
    ],
)

cc_library(
    name = "OpenImageDenoise",
    srcs = [
        "core/api.cpp",
        "core/buffer.h",
        "core/color.cpp",
        "core/color.h",
        "core/common.h",
        "core/conv.h",
        "core/cpu_buffer.h",
        "core/cpu_device.cpp",
        "core/cpu_device.h",
        "core/data.h",
        "core/device.cpp",
        "core/device.h",
        "core/filter.cpp",
        "core/filter.h",
        "core/image.h",
        "core/input_reorder.cpp",
        "core/input_reorder.h",
        "core/network.cpp",
        "core/network.h",
        "core/node.h",
        "core/output_copy.cpp",
        "core/output_copy.h",
        "core/output_reorder.cpp",
        "core/output_reorder.h",
        "core/pool.h",
        "core/progress.h",
        "core/reorder.h",
        "core/scratch.cpp",
        "core/scratch.h",
        "core/tensor.h",
        "core/tza.cpp",
        "core/tza.h",
        "core/unet.cpp",
        "core/unet.h",
        "core/upsample.cpp",
        "core/upsample.h",
        "core/vec.h",
        "include/OpenImageDenoise/config.h",
        "include/OpenImageDenoise/oidn.h",
        "include/OpenImageDenoise/oidn.hpp",
    ],
    includes = ["core"],
    textual_hdrs = [
        "core/image.isph",
        "core/input_reorder.ispc",
        "core/color.isph",
        "core/color.ispc",
        "core/math.isph",
        "core/upsample.ispc",
        "core/output_copy.ispc",
        "core/output_reorder.ispc",
        "core/reorder.isph",
        "core/tensor.isph",
        "core/vec.isph",
    ],
    deps = [
        ":common",
    ],
)
